# refbooks

./: Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: pyci.yml
refbooks_manager/: asgi.py  settings.py  test_container.py  urls.py  wsgi.py
refbooks_manager/fixtures/: elements.json  refbooks.json  versions.json
refbooks_manager/refbooks/: admin.py  apps.py  mixins.py  models.py  renderers.py  serializers.py  urls.py  views.py
refbooks_manager/refbooks/migrations/: 0001_initial.py  0002_alter_version_start_date.py  0002_rename_name_element_value.py  0003_alter_version_version_alter_element_unique_together_and_more.py  0004_alter_element_code.py  0005_alter_version_start_date.py  0006_alter_version_start_date.py  0007_alter_version_unique_together.py  0008_alter_version_unique_together.py
refbooks_manager/refbooks/tests/: test_models.py  test_views.py
